--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,25 @@
 body {
     background-color: Cornsilk;
     font-family: Beleren;
+    margin: 0px;
+    padding: 0px;
 }
 
-#deckTable {
+#pageHeader {
+    background-color: LightSkyBlue;
+    padding: 1em;
+    border-bottom: 2px solid LightSlateGray;
+}
+
+#pageHeader h1 {
+    margin-top: 0px;
+}
+
+#pageHeader p {
+    margin-bottom: 0px;
+}
+
+.decksList {
     background-color: #f0f0f0;
     margin: 1em;
     border-collapse: collapse;
@@ -57,12 +73,12 @@ div.manaCost {
     color: #800000;
 }
 
-#deckTableBorder {
-    background-color: #f0f0f0;
-    margin: 1em;
-    padding: 1em;
-    border-radius: 1em;
-    border: 2px solid LightSlateGray;
+#error h3 {
+    margin-top: 0px;
+}
+
+#error p {
+    margin-bottom: 0px;
 }
 
 #deckTable {
@@ -90,6 +106,10 @@ div.manaCost {
     box-shadow: inset 0px 0px 0.25em 0px rgba(0, 0, 0, 1);
 }
 
+.filter h2 {
+    margin-top: 0px;
+}
+
 #cardPreviewBox {
     position: fixed;
     right: 2em;
@@ -98,9 +118,9 @@ div.manaCost {
 }
 
 .cardPreview {
-    width: 25vh;
-    height: 35vh;
-    border-radius: 1.25vh;
+    width: 2.5in;
+    height: 3.5in;
+    border-radius: 0.125in;
     background-color: #000000;
     background-size: 100% 100%;
     box-shadow: inset 0px 0px 0.25em 0px rgba(0, 0, 0, 1);
